# moodler

./: .git-blame-ignore-revs  .gitignore  README.md  dotenv_example  main.py  moodler.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: action.yml
moodler/: .gitignore  __init__.py  adminer_commands.py  assignment.py  attendance.py  config.py  consts.py  course.py  csv.py  download.py  enums.py  feedbacks.py  glossary.py  groups.py  moodle.py  moodle_api.py  moodle_connect.py  moodle_csv.py  moodle_exception.py  report.py  sections.py  students.py  submission.py  upload.py  urlencode.py  utilities.py
tests/: pytest.ini  test_assignments.py  test_attendance.py  test_moodle_csv.py  test_statistics.py  test_urlencode.py
tests/test_data/: grade_worksheet_input.csv  grade_worksheet_output.csv  marking_grade_worksheet_input.csv  marking_grade_worksheet_output.csv  python_input.csv  python_output.csv  statistics_data.py
