[tool.poetry]
name = "moodler"
version = "1.0.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
environs = "^9.5.0"
parse = "^1.19.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
